# hermes

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alertmanager_client.py  config.py  go.mod  go.sum  jira_client.py  job_monitor.py  main.go  main.py  pyproject.toml  remediation_manager.py  requirements.txt  rundeck_client.py  slack_client.py  state_store.py  test_app.py  test_resolved_events.py
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: claude.yml
config/: config.example.yaml  config.go  config.yaml  config.yaml.example
src/: __init__.py
src/hermes/: __init__.py  config.py
src/hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hermes/api/: __init__.py  app.py
src/hermes/clients/: __init__.py  alertmanager.py  jira.py  rundeck.py  slack.py
src/hermes/core/: __init__.py  job_monitor.py  remediation_manager.py  state_store.py
src/hermes/utils/: __init__.py  audit_logger.py  metrics.py  rate_limiter.py
tests/: conftest.py  test_alert_payload_forwarding.py  test_audit_logger.py  test_burst_suppression.py  test_circuit_breaker.py  test_deduplication.py  test_health_endpoints.py  test_job_id_mappings.py  test_metrics.py  test_rate_limiter.py  test_value_mappings.py  test_workflow_recovery.py
